Various ineffectual attempts at touch lag solution
- Nothing really makes it into this code, but this session was about trying to figure out why there's a lag on mobile; specifically seems to be that *two* events are fire and it's the second (delayed) one that ends up calling the audio, which makes it lag? Why? Dunno.
- Has me seriously wondering whether to switch to a different library, at least to *check* if this is something about how p5 is implemented. Should I try something like ummm canvas.js? PixiJS? Would just want to mock something up. This sounds like a case for branching? Fuuuuck...

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,17 @@ it buddy.
 
 **********************************************/
 
+main {
+  overflow: hidden;
+  user-select: none;
+}
+
 body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
