--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ it buddy.
 
 **********************************************/
 
+* {
+  overflow: hidden;
+  user-select: none;
+}
+
 main {
   overflow: hidden;
   user-select: none;
@@ -14,6 +19,7 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  user-select: none;
 }
 
 body::-webkit-scrollbar {
