--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,28 @@ it buddy.
 
 **********************************************/
 
+#container {
+  /* overflow: hidden; */
+}
+
 * {
   overflow: hidden;
   user-select: none;
+  touch-action: manipulation;
 }
 
 main {
-  overflow: hidden;
+  /* overflow: hidden; */
   user-select: none;
+  touch-action: manipulation;
 }
 
 body {
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   user-select: none;
+  touch-action: manipulation;
 }
 
 body::-webkit-scrollbar {
