Dragging seems to be up and running
- I can't totally recall all the bits I did, but importantly I did end up connecting up my phone to the computer so I could check out debugging info via Safari's tools in order to understand a bit better what's going wrong
- Importantly it *does* seem to just be a bug in Chrome's phone simulation that the pan event starts sending 0,0 as a position - seems fine on the phone
- Increased the size of the draggable and target because it was hard to see under my finger
- Found position:fixed for canvas eliminates the ability to drag the page up in Safari
- Messed around with all the touch-action: manipulation stuff to stop errant double-tap zooms that broke it
- So the whole thing is potentially more robust in general as well
- I've left this build only generating the Drag interaction just because of testing, but in theory it's mostly ready to be folded back into the whole larger thing
- It made me realize I need better control over: the general size of the elements (especially any of the circles for dragging/targeting/typing), and for positioning elements randomly (or at all?) within the bounds of the playable area (taking account of the Acts area)
- So there's some wiggles there

--- a/css/style.css
+++ b/css/style.css
@@ -5,30 +5,18 @@ it buddy.
 
 **********************************************/
 
-#container {
-  /* overflow: hidden; */
-}
-
-* {
-  overflow: hidden;
-  user-select: none;
-  touch-action: manipulation;
-}
-
-main {
-  /* overflow: hidden; */
-  user-select: none;
-  touch-action: manipulation;
-}
-
 body {
   padding: 0;
   margin: 0;
-  /* overflow: hidden; */
+  overflow: hidden;
   user-select: none;
   touch-action: manipulation;
 }
 
 body::-webkit-scrollbar {
   display: none;
+}
+
+canvas {
+  position: fixed;
 }
